<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AddNoteActivity"
    >

    <!-- TODO Fix hardcoded strings, colors, dimensions, etc. -->

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:id="@+id/img_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_baseline_arrow_back_24"
                android:layout_centerVertical="true"
                />
            <TextView
                android:id="@+id/txt_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_note"
                android:textColor="@color/black"
                android:layout_toEndOf="@id/img_back"
                android:layout_toStartOf="@id/img_confirm"
                android:gravity="center"
                android:textSize="@dimen/app_name_size"
                android:textStyle="bold"
                />
            <ImageView
                android:id="@+id/img_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="14dp"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/ic_baseline_check_24"
                />

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>
    <EditText
        android:id="@+id/et_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/title_hint"
        android:textSize="@dimen/text_size_large"
        android:layout_margin="@dimen/app_name_margin"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        />
    <EditText
        android:id="@+id/et_image_url"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/add_note_main_margin"
        android:hint="@string/image_hint"
        android:maxLines="2"
        android:textSize="@dimen/text_size_mid"
        app:layout_constraintEnd_toEndOf="@+id/et_title"
        app:layout_constraintStart_toStartOf="@+id/et_title"
        app:layout_constraintTop_toBottomOf="@+id/et_title"
        />
    <EditText
        android:id="@+id/et_description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/add_note_main_margin"
        android:gravity="top"
        android:textSize="@dimen/text_size_mid"
        android:hint="@string/description_hint"
        app:layout_constraintEnd_toEndOf="@+id/et_image_url"
        app:layout_constraintStart_toStartOf="@+id/et_image_url"
        app:layout_constraintTop_toBottomOf="@+id/et_image_url"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>