<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <!-- TODO Fix hardcoded strings, colors, dimensions, etc. -->

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/app_name_size"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/app_name_margin"
        android:layout_marginBottom="@dimen/app_name_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="@dimen/text_size_small"
        android:textColor="@color/black"
        android:layout_marginLeft="@dimen/app_name_margin"
        android:layout_marginRight="@dimen/app_name_margin"
        android:gravity="start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_app_name"
        />
    <TextView
        android:id="@+id/tv_your_notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_notes"
        android:textSize="@dimen/text_size_mid"
        android:textColor="@color/black"
        android:layout_marginBottom="@dimen/app_name_margin"
        android:layout_marginLeft="@dimen/app_name_margin"
        android:layout_marginRight="@dimen/app_name_margin"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_your_notes"
        tools:listitem="@layout/note_card"
        android:layoutAnimation="@anim/la_slide_in"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/fab_button_margin"
        app:srcCompat="@android:drawable/ic_input_add"
        app:backgroundTint="@color/black"
        app:tint="@color/white"
        />

</androidx.constraintlayout.widget.ConstraintLayout>