<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/note_card"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/card_margin_mid"
    android:layout_marginEnd="@dimen/card_margin_mid"
    android:layout_marginTop="@dimen/card_margin_mid"
    app:cardBackgroundColor="@color/purple"
    app:cardCornerRadius="@dimen/card_corner_radius"
    android:elevation="@dimen/card_elevation"
    tools:ignore="ExtraText"
    >

    <!-- TODO Fix hardcoded strings, colors, dimensions, etc. -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="@dimen/card_margin_mid"
            android:layout_marginTop="@dimen/card_margin_mid"
            android:layout_marginBottom="@dimen/card_margin_mid"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:visibility="gone"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/card_inner_padding_small"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/card_inner_padding_small"
                android:paddingTop="@dimen/card_inner_padding_small"
                android:paddingRight="@dimen/card_inner_padding_small"
                android:text="@string/title_text"
                android:textColor="@color/black"
                android:textSize="@dimen/title_text_size"
                android:textStyle="bold"
                android:ellipsize="end"
                />
            <TextView
                android:id="@+id/tv_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_title"
                android:minLines="2"
                android:maxLines="2"
                android:paddingLeft="@dimen/card_inner_padding_small"
                android:paddingRight="@dimen/card_inner_padding_small"
                android:text="@string/description_text"
                android:textColor="@color/black"
                android:ellipsize="end"
                android:textSize="@dimen/desc_text_size"
                />
            <ImageView
                android:id="@+id/img_date_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_below="@id/tv_description"
                android:padding="@dimen/card_inner_padding_small"
                app:srcCompat="@drawable/ic_baseline_calendar_today_24"
                app:tint="@color/black"
                />
            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_description"
                android:layout_toEndOf="@id/img_date_icon"
                android:paddingTop="@dimen/card_inner_padding_small"
                android:paddingEnd="@dimen/card_inner_padding_small"
                android:paddingBottom="@dimen/card_inner_padding_small"
                android:text="@string/date_text"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_small"
                />
            <TextView
                android:id="@+id/tv_is_edited"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_description"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@id/tv_date"
                android:gravity="right"
                android:paddingTop="6dp"
                android:paddingEnd="@dimen/card_inner_padding_mid"
                android:visibility="gone"
                android:paddingBottom="4dp"
                android:text="@string/is_edited_indicator"
                android:textColor="@color/black"
                android:textSize="@dimen/edited_size"
                android:textStyle="italic"
                />


        </RelativeLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>
